# TSmixer-NNDL

./: README.md  main.ipynb  main.py  pyproject.toml
datasets/: 559_test.csv  559_train.csv  563_test.csv  563_train.csv
