[project]
name = "tsmixer-nndl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=1.3.5",
    "pytorch-tsmixer>=0.2.0",
    "torch>=2.8.0",
    "
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
